--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3339,7 +3339,9 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 -------------------------------------------------------------------
-4.14.0:
+4.13.1:
+
+-Bug fix for lite charts excessive disk writes (when corresponding archival chart has minimal initial data)
 
 -Misc. UX improvements
 
