--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3341,7 +3341,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.13.1:
 
--Bug fix for lite charts excessive disk writes (when corresponding archival chart has minimal initial data)
+-Bug fix / optimizations for lite charts excessive disk writes
 
 -Misc. UX improvements
 
