--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3439,6 +3439,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -More RSS feeds to choose from (on News page)
 
+-New markets for example assets
+
 IMPORTANT UPGRADE NOTES: 
 
 v4.06.0 / v4.07.7 / v4.10.1 HAVE MAJOR OVERHAULS TO CONFIGURATION VARIABLE NAMES (FOR MODULARITY, SEMANTICS, AND EASY-TO-UNDERSTAND NAMES). MIGRATE ANY PRE-EXISTING CUSTOM CONFIGURATION TO THE #NEW# VARIABLE NAMES
