Lite chart scaling optimizations
Lite chart scaling optimizations

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3475,6 +3475,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Bug fix for user-initiated chart zoom (reset user-initiated zoom before loading a new time interval chart like 3D / 1W / 1M / etc)
 
+-Lite chart scaling optimizations (less disk writes AND faster runtimes)
+
 -More RSS feeds to choose from (on News page)
 
 -Misc. optimizations and UX improvements
@@ -3484,6 +3486,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -Revised documentation
 
 IMPORTANT UPGRADE NOTES: 
+
+v4.14.3 HAS MAJOR OVERHAULS TO LITE CHART (3D / 1W / 1M / ETC) SCALING OPTIMIZATIONS, WHICH MAY SKEW A FEW (NOT MANY THOUGH) CHART TIME INTERVALS #INITIALLY IF YOU ARE UPGRADING FROM A PREVIOUS VERSION# (BUT WILL RETURN TO NORMAL IMMEDIATELY AFTER THE FIRST NEW DATA POINT #AFTER# UPGRADING)
 
 v4.06.0 / v4.07.7 / v4.10.1 HAVE MAJOR OVERHAULS TO CONFIGURATION VARIABLE NAMES (FOR MODULARITY, SEMANTICS, AND EASY-TO-UNDERSTAND NAMES). MIGRATE ANY PRE-EXISTING CUSTOM CONFIGURATION TO THE #NEW# VARIABLE NAMES
 
