Code cleanup, fixes for lite chart optimization
Code cleanup, fixes for lite chart optimization

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3479,7 +3479,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -More RSS feeds to choose from (on News page)
 
--Misc. optimizations and UX improvements
+-Misc. optimizations / UX improvements / cleanup
 
 -Ubuntu support for auto-install script
 
