Notes / new resource link
Notes / new resource link

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -26,6 +26,9 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
+Have balance summary at bottom of portfolio page show percent of MISCASSETS too.
+
+
 Check to make sure everything like news feeds etc still run ok if charts page is turned off.
 
 
