--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3619,6 +3619,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Bug fix for lite chart updating logic (since we update at random intervals to spread the work load across multiple runtimes, check for multiple eligible new archival data points instead of one)
 
+-Auto-install script explicitly uses the chosen PHP version for the cron jobs too (charts / alerts background tasks)
+
 IMPORTANT UPGRADE NOTES: 
 
 v4.14.6 AND HIGHER REQUIRES PHP-FPM (FastCGI) v7.2 OR HIGHER (if you auto-installed, FULLY re-install EVERYTHING with the latest auto-install script: https://git.io/JeWWE)
