--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3619,15 +3619,17 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -MANY bug fixes and optimizations for lite chart updating logic
 
--Bug fix for news feeds feature crashing web server
+-Bug fix (revised, finally found root cause) for news feeds logic crashing server
 
--Auto-install script explicitly looks for the chosen PHP version for the cron jobs too (charts / alerts background tasks), or defaults to the standard / generic path: /usr/bin/php
+-Option to ignore warning to use PHP-FPM (HELPS PREVENT RUNTIME CRASHES ON LOW POWER DEVICES OR HIGH TRAFFIC INSTALLS)
+
+-Auto-install script explicitly looks for the chosen PHP version for the cron jobs too (charts / alerts background tasks), or defaults to the standard generic path: /usr/bin/php
 
 -Misc UX revisions
 
 IMPORTANT UPGRADE NOTES: 
 
-v4.14.6 AND HIGHER REQUIRES PHP-FPM (FastCGI) v7.2 OR HIGHER (if you auto-installed, FULLY re-install EVERYTHING with the latest auto-install script: https://git.io/JeWWE)
+v4.14.6 AND HIGHER WILL #FORCEFULLY RECOMMEND# PHP-FPM (FastCGI) v7.2 OR HIGHER. This warning can be disabled in the developer settings in config.php as of v4.14.7. If you auto-installed, you can auto-upgrade if you FULLY re-install EVERYTHING with the latest auto-install script: https://git.io/JeWWE
 
 v4.14.3 HAS MAJOR OVERHAULS TO LITE CHART (1W / 1M / ETC) SCALING OPTIMIZATIONS, WHICH MAY SKEW A FEW (NOT MANY THOUGH) CHART TIME INTERVALS #INITIALLY IF YOU ARE UPGRADING FROM A PREVIOUS VERSION# (BUT WILL RETURN TO NORMAL IMMEDIATELY AFTER THE FIRST NEW DATA POINT #AFTER# UPGRADING)
 
@@ -3649,39 +3651,6 @@ v4.03.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM A
 MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.
 
 -------------------------------------------------------------------
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
