Optimized / fixed javascript logic, documentation revisions
Optimized / fixed javascript logic, documentation revisions

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3633,7 +3633,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Changes to default config
 
--Misc UX revisions
+-Misc fixes / UX revisions
 
 IMPORTANT UPGRADE NOTES: 
 
