--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -26,10 +26,7 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-Print out latest list of exchanges for readme / landing page, AFTER ADDING BITMEX.
-
-
-Add all liquid.com  API markets
+Add BTSE API: https://api.btse.com/spot/api/v3.2/market_summary
 
 
 Store the php timeout as a cached var, and compare the CACHED app config to it at runtime. If they differ from each other, delete the root htaccess and user.ini files to trigger recreating them with an updated php timeout. Also make sure the php timeout setting and updating logic / functions are using the CACHED app config.
@@ -44,9 +41,6 @@ Use new internal api function calls as much as possible for the tests logic we h
 See if exchange API data arrays can be manipulated slightly to build a reusable module for every exchange's API calls.
 
 
-Add bitmex API (and all markets): https://www.bitmex.com/api/explorer/
-
-
 In debug mode, maybe add our new 'used ram' stat instead (that doesn't include buffers / cached ram).
 
 
@@ -56,7 +50,7 @@ Check optimization by enabling "telemetry" debug mode, and reviewing debugging l
 Check log formatting for every debug mode.
 
 
-Make sure all currency markets are added (ALREADY DID THIS FOR KRAKEN).
+Make sure all currency markets are added ONLY FOR MAJOR EXCHANGES (ALREADY DID THIS FOR KRAKEN).
 
 
 Review Help FAQ, and config.php settings documentation.
