--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -19,7 +19,7 @@ Post on hive, telegram, discord, Twitter, Facebook (and r/CryptoMarkets and r/Cr
 
 ALWAYS do everything in the optimizations / bugs / tests / ux / qa / other section of this list FIRST, before adding ANY new features (find every flaming turd before we start a dumpster fire).
 
-Youtube channels on the resources page, that MAY BE DYING (keep an eye on them): CNBC Crypto Trader / IMineBlocks.
+Youtube channels on the resources page, that MAY BE DYING (keep an eye on them): IMineBlocks.
 
 ///////////////////////////////////////////////////////
 OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
