Js refactoring / cleanup, support for new 'SameSite' cookies standard and explicit Strict set, misc optimizations and refactoring, resources page and news feeds revisions
Js refactoring / cleanup, support for new 'SameSite' cookies standard and explicit Strict set, misc optimizations and refactoring, resources page and news feeds revisions

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3953,9 +3953,15 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.17.0:
 
+-Support for new cookie stanard 'SameSite', explicitly set to strict for privacy
+
+-Refactored / cleaned javascript
+
 -Revised default config 
 
--Resource page revisions
+-Revised resources page
+
+-More news feeds
 
 -Misc UX revisions
 
